# diwan

./: .gitignore  README.md  app_server.py  docker-compose.yml  pyproject.toml
data/qawaim_parsed/: output.json
data/qawaim_parsed/markdown/: cib_standalone_financial_statement.parse.md  document.md
diwan/: chainlit_handlers.py  main.py
diwan/ingestion/: chunker.py
diwan/pipeline/: graph.py
diwan/pipeline/nodes/: extractor.py  lookup.py  planner.py  router.py  synthesizer.py
diwan/retrieval/: retriever.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: playground.tsx
frontend/src/components/ui/: AIMessage.tsx  AttachedFiles.tsx  FileUploader.tsx  InputBar.tsx  Message.tsx  Shell.tsx  TopBar.tsx
frontend/src/components/ui/WelcomeCard/: PromptSuggestion.tsx  WelcomeCard.tsx
frontend/src/hooks/: useArabicRTL.ts
public/: style.css
scripts/: build_markdown.py  draw_chunker_graph.py  draw_core_graph.py  pull_models.py  run_ingestion.py  upsert_mohasaba.py
tests/: test_chainlit_handlers.py  test_mohasaba_upsert.py  test_retriever.py  test_upsert.py
