[project]
name = "diwan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "landingai-ade>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "langgraph>=0.1.0",
    "langfuse>=2.0.0,<3.0.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
    "qdrant-client>=1.9.0",
    "torch==2.12.0+cu126",
    "FlagEmbedding>=1.2.0",
    "chainlit>=2.0.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a running Qdrant instance",
    "slow: long-running embedding or ingestion tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diwan"]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
